[tool.poetry]
name = "volttron"
version = "0.1.0"
description = "VOLTTORN wrapper library to bundle volttron-core voltron-lib-auth and volttron-lib-zmq"
license = "Apache-2.0"
authors = ["volttron <volttron@pnnl.gov>"]
readme = "README.md"
homepage = "https://volttron.org"
repository = "https://github.com/eclipse-volttron/volttron-core"
documentation = "https://volttron.readthedocs.org"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

packages = [
    { include = "volttron", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
volttron-core = { path="../volttron-core", develop = true}
volttron-lib-auth = { path="../volttron-lib-auth", develop = true}
volttron-lib-zmq = { path="../volttron-lib-zmq", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
